syntax = "proto3";

package ru.qq.grpc;

option java_multiple_files = true;

message numsRequest{
  int32 num1 = 1;
  int32 num2 = 2;
}

message numResponse{
  int64 num = 1;
}

service MainService{
  rpc getTestMessage(numsRequest) returns (numResponse);
}